# atcoder

./: .gitignore  README.md
abc251/: pyproject.toml
abc251/abc251/: a.py  b.py  c.py
abc251/script/: add
abc251/tests/: test_a.py  test_b.py  test_c.py
abc252/: .envrc  pyproject.toml
abc252/abc252/: a.py  b.py  c.py
abc252/script/: add
abc252/tests/: test_a.py  test_b.py  test_c.py
abs/: pyproject.toml
abs/abs/: abc049_c.py  abc081_a.py  abc081_b.py  abc083_b.py  abc085_b.py  abc085_c.py  abc086_a.py  abc086_c.py  abc087_b.py  abc088_b.py
abs/tests/: test_abs.py
practice/: pyproject.toml
practice/practice/: practice_1.py
practice/tests/: test_practice.py
script/: new
typical90/: .envrc  .flake8  Justfile  pyproject.toml
typical90/script/: add
typical90/tests/: test_a.py  test_b.py  test_c.py  test_d.py  test_f.py  test_g.py  test_h.py  test_j.py  test_l.py  test_n.py  test_p.py  test_typical90.py
typical90/typical90/: a.py  b.py  c.py  d.py  f.py  g.py  h.py  j.py  l.py  n.py  p.py
