[tool.poetry]
name = "abc251"
version = "0.1.0"
description = ""
authors = ["Takuya Asano <takuya.a@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.960"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
