[project]
name = "abc252"
version = "0.1.0"
description = ""
authors = [
    { name = "Takuya Asano", email = "takuya.a@gmail.com" },
]
requires-python = ">=3.8,<3.13"
dependencies = []

[dependency-groups]
dev = [
    "flake8>=4.0.1,<5.0.0",
    "black>=22.3.0,<23.0.0",
    "isort>=5.10.1,<6.0.0",
    "mypy>=0.950,<0.960",
    "pytest>=7.1.2,<8.0.0",
]

[tool.uv]
package = false

[tool.black]
line-length = 119

[tool.isort]
profile = "black"
line_length = 119
